--- a/diabetestool.html
+++ b/diabetestool.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>The Diabetes Risk Assessment Tool</title>
     <link rel="stylesheet" type="text/css" href="diabetestool.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="diabetestool.js"></script>
